Refactor and polish LangExtensions.